[tool.poetry]
name = "aides"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.6"
pandas = "2.2.3"
requests = "2.32.3"
rapidfuzz = "3.10.1"
tqdm = "4.67.0"
boto3 = "1.35.56"
azure-storage-blob = "12.23.1"
google-cloud-storage = "2.18.2"
playwright = "1.48.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
